fixed scaling and white space

--- a/src/components/project/project.module.scss
+++ b/src/components/project/project.module.scss
@@ -1,14 +1,14 @@
 .project-styled {
     display: flex;
     min-height: 100vh;
-    min-width: 100vw;
+    min-width: 70vw;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
 .project-image {
-    width: 70%;
+    width: 90%;
 }
 
 .title {
