--- a/src/pages/projects/projects.module.scss
+++ b/src/pages/projects/projects.module.scss
@@ -1,4 +1,5 @@
-.projects-styled{
+.projects-styled {
     display: flex;
     flex-direction: row;
+    margin-left: 400px;
 }
